# vesc-flipsky-arduino-esp32-with-display

./: CLAUDE.md  README.md
configs/: lv_conf.h
main/: display.cpp  display.h  logger.h  lvgl_driver.cpp  lvgl_driver.h  main.ino  ui.cpp  ui.h  utils.cpp  utils.h  wifi_service.cpp
simulator/: CMakeLists.txt  arduino_shim.cpp  lv_drv_conf.h  main.c
